updated js and html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="img" style="display: none;"><img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHozNm9xeWdzdmpiODA2YXN2bjI0Nzc0eTRhYXhlZ2RrNHhjNzg3NSZlcD12MV9pbnRlcm5naWZfYnlfaWQmY3Q9cw/3a3P0J6teWlfF1IbA4/giphy.webp" alt="Success"></div>
     <div class="login-container" id="container">
-        <h2>VEHICLE CATALOGUE LOGIN</h2>
+        <h2>VEHICLE AND SPARE PARTS PRICE <br>CATALOGUE LOGIN</h2>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Username" required>
             <input type="password" id="password" placeholder="Password" required>
