updated js file

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <select id="interior">Interior parts</select>
     <select id="individualBodyParts">Individual body parts and electricals</select>
     <select id="bodyPartAssemblies">Body parts (assemblies)</select>
-    <button id="searchPartsButton" onclick="searchParts()">Search Parts</button>
+    <button id="searchPartsButton">Search Parts</button>
 </div>
 
 <div id="partsResults" class="parts-results"></div>
