--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit" id="btn">Login</button>
         </form>
-        <div id="error" class="error">Invalid username or password</div>
+        <div id="error" class="error">Invalid or password</div>
     </div>
 
     <div id="main-content" class="main-content" style="display: none;">
