--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHozNm9xeWdzdmpiODA2YXN2bjI0Nzc0eTRhYXhlZ2RrNHhjNzg3NSZlcD12MV9pbnRlcm5naWZfYnlfaWQmY3Q9cw/3a3P0J6teWlfF1IbA4/giphy.webp" type="image/x-icon">
 </head>
 <body>
-    <div id="img" style="display: none;">
+    <div id="img">
         <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHozNm9xeWdzdmpiODA2YXN2bjI0Nzc0eTRhYXhlZ2RrNHhjNzg3NSZlcD12MV9pbnRlcm5naWZfYnlfaWQmY3Q9cw/3a3P0J6teWlfF1IbA4/giphy.webp" alt="Success">
     </div>
     <div class="login-container" id="container">
