--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <input type="text" id="name" placeholder="Name" required>
                     <input type="email" id="email" placeholder="Email" required>
                     <input type="text" id="phone" placeholder="Phone" required><br><br>
-                    <button class="btn1" type="button" onclick="randomPass()">Generate Password</button>
+                    <button class="btn1" type="button" onclick="randomPass()">Password Generator</button>
                     <button class="btn2" type="button" onclick="addToList()">Add User</button>
                 </form>
                 <ul id="userList"></ul>
