--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vehicle and Spare Part Price Catalogue</title>
+    <title>Vehicle and Spare Part Catalogue</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHozNm9xeWdzdmpiODA2YXN2bjI0Nzc0eTRhYXhlZ2RrNHhjNzg3NSZlcD12MV9pbnRlcm5naWZfYnlfaWQmY3Q9cw/3a3P0J6teWlfF1IbA4/giphy.webp" type="image/x-icon">
 </head>
